--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -157,7 +157,7 @@
     @apply scroll-m-12 text-lg lg:text-xl font-semibold tracking-tight leading-snug;
   }
   h4 {
-    @apply scroll-m-10 lg:text-lg font-semibold tracking-tight leading-tight;
+    @apply scroll-m-10 text-base lg:text-lg font-semibold tracking-tight leading-tight;
   }
   p {
     @apply text-sm leading-normal;
